spec/generic/function/ptr_slice_test.go
package function

import "testing"

/*
refer: https://www.reddit.com/r/golang/comments/tyn2c9/questionable_generics_cannot_use_type_aliases/
*/
type A struct {
	Value int
}

type ASlice []A

func PrintSlice[T any](s []T) {

}

// func PrintSlicePtrOld[T any](s *[]T) {} // error
func PrintSlicePtr[T any, S ~[]T](s *S) {}

func TestPtrSlice(t *testing.T) {
	slice := ASlice{A{Value: 1}, A{Value: 2}, A{Value: 3}}
	// works,
	PrintSlice(slice) // slice æ˜¯named ASlice->unamed []A, underlying: []A -> []A

	// ðŸ˜¤ compile error: cannot use &slice (value of type *ASlice) as type *[]A in argument to PrintSlice
	// PrintSlicePtrOld(&slice) //&sliceæ˜¯ unamed *ASlice->unamed *[]A, underlying: *ASlice -> *[]A
	PrintSlicePtr(&slice) //&sliceæ˜¯ unamed *ASlice->unamed *[]A, underlying: *ASlice -> *[]A (ä½†æ˜¯æœ‰ ~[]T, æ‰€ä»¥å¯ä»¥åŒ¹é…)

	sameSliceButDifferent := []A{{Value: 1}, {Value: 2}, {Value: 3}}
	// works just fine
	PrintSlicePtr(&sameSliceButDifferent) //  unamed *[]A->unamed *[]A, underlying: *[]A-> *[]A

}
